Fixes styles for word wrapping

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,6 @@
 .Card {
   display: table;
-  word-wrap: break-word;  
+  word-break: break-word;
 }
 
 .Card .content {
